# nrp

./: CMakeLists.txt  README.md
src/: decomposition.cpp  decomposition.h  instance.cpp  instance.h  main.cpp  solution.cpp  solution.h
